# etl-tasks

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.test.yaml  mypy.ini  pyproject.toml  run_tests.sh  setup.sh
.github/workflows/: deploy.yml  integration.yml  pylint.yml  pytest.yml  unittest.yml
tasks/basic/api_requests/: task.py
tasks/basic/csv_transform/: task.py
tasks/basic/text_file_analytics/: task.py
tasks/intern/csv_transform/: output.csv
tasks/intern/text_file_analytics/: sample.txt  task.py
tasks/junior/: physics_momentum.py
tasks/junior/database/: connect.py
tasks/junior/object_oriented/: physics_momentum.py
tests/integration/: junior_database_test.py
tests/tasks/basic/: api_requests_test.py  test_test.py
tests/tasks/intern/: api_requests_test.py
tests/unit/: intern_api_requests_test.py
